# local_llm

./: .gitignore  README.md  config.yaml  index.html  main.py  pyproject.toml  server.py
notebooks/: debug.ipynb  load_models.ipynb
src/: document_processor.py  embeddings.py  rag_chain.py  search.py  utils.py
static/: ChatInterface.js  index.html
tests/: test_document_processor.py  test_embeddings.py  test_rag_chain.py  test_search.py
